@@ -7,11 +7,8 @@ AM_INIT_AUTOMAKE(eplayer, 0.7)
 AC_PROG_CC
 AC_ISC_POSIX
 AC_HEADER_STDC
-AC_ARG_PROGRAM
-AM_PROG_LIBTOOL
 
 AC_SUBST(CFLAGS)
-AC_SUBST(CPPFLAGS)
 AC_SUBST(LDFLAGS)
 
 ## The Simplistic Way
@@ -22,49 +19,20 @@ AC_CHECK_LIB(vorbisfile,ov_open)
 AC_CHECK_LIB(ecore_evas,ecore_evas_init)
 
 ## The more complete way
+AC_PATH_GENERIC(ecore, , ,
+	AC_MSG_ERROR(Cannot find ecore: Is ecore-config in path?))
 
-PROG="ecore-config";
-AC_PATH_PROG(ECORE_CONFIG, $PROG, "", $PATH)
-if [ test -z $ECORE_CONFIG ]; then
-  echo $PROG " is not in your \$PATH. Please ensure it is.";
-  echo "Read the manual page for you shell as to how to extend your path.";
-  echo "FATAL ERROR. ABORT.";
-  exit -1;
-fi
-ecore_cflags=`$ECORE_CONFIG --cflags`
-ecore_libs=`$ECORE_CONFIG --libs`
-AC_SUBST(ecore_cflags)
-AC_SUBST(ecore_libs)
+AC_PATH_GENERIC(evas, , ,
+	AC_MSG_ERROR(Cannot find evas: Is evas-config in path?))
 
+AC_PATH_GENERIC(edje, , ,
+	AC_MSG_ERROR(Cannot find edje: Is edje-config in path?))
 
-PROG="evas-config";
-AC_PATH_PROG(EVAS_CONFIG, $PROG, "", $PATH)
-if [ test -z $EVAS_CONFIG ]; then
-  echo $PROG " is not in your \$PATH. Please ensure it is.";
-  echo "Read the manual page for you shell as to how to extend your path.";
-  echo "FATAL ERROR. ABORT.";
-  exit -1;
-fi
-evas_cflags=`$EVAS_CONFIG --cflags`
-evas_libs=`$EVAS_CONFIG --libs`
-AC_SUBST(evas_cflags)
-AC_SUBST(evas_libs)
-
-PROG="edje-config";
-AC_PATH_PROG(EDJE_CONFIG, $PROG, "", $PATH)
-if [ test -z $EVAS_CONFIG ]; then
-  echo $PROG " is not in your \$PATH. Please ensure it is.";
-  ebscho "Read the manual page for you shele as to how to extend your path.";
-  echo "FATAL ERROR. ABORT.";
-  exit -1;
-fi
-edje_cflags=`$EDJE_CONFIG --cflags`
-edje_libs=`$EDJE_CONFIG --libs`
-AC_SUBST(edje_cflags)
-AC_SUBST(edje_libs)
-
+AC_PATH_GENERIC(esmart, , ,
+	AC_MSG_ERROR(Cannot find esmart: Is esmart-config in path?))
 
 AC_OUTPUT([
 Makefile
+m4/Makefile
 src/Makefile
 ])
