@@ -1,0 +1,2 @@
+EXTRA_DIST = ac_path_generic.m4
+
